--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,3 +40,21 @@ jobs:
 
       # run tests!
       - run: gradle test
+
+  deploy-stage:
+      docker:
+        - image: buildpack-deps:trusty
+      steps:
+        - checkout
+        - run:
+            name: Deploy if tests pass and branch is Staging
+            command: |
+                      git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build
+      - deploy-stage:
+          requires:
+            - build
