--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,10 +21,6 @@ jobs:
       JVM_OPTS: -Xmx3200m
       TERM: dumb
 
-    branches:
-      only:
-        - master
-         
     steps:
       - checkout
 
@@ -59,6 +55,10 @@ workflows:
   build-deploy:
     jobs:
       - build
+          filters:
+            branches:
+              only:
+                - master
       - deploy-stage:
           requires:
             - build
