--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,11 +54,11 @@ workflows:
   version: 2
   build-deploy:
     jobs:
-      - build
-      - deploy-stage:
-          requires:
-            - build
+      - build:
           filters:
             branches:
               only:
                 - master
+      - deploy-stage:
+          requires:
+            - build
