final config for deployment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,11 @@ workflows:
           filters:
             branches:
               only:
-                - master
+                - deploy_master
       - deploy-stage:
           requires:
             - build
+          filters:
+            branches:
+              only:
+                - deploy_master
